# simple-haskell-blog

./: .gitignore  Convert.hs  Html.hs  LICENSE.txt  Markup.hs  README.md  hello.hs  hs-blog.cabal  rough.hs
Html/: Internal.hs
app/: Main.hs  OptParse.hs
examples/: 1.txt  2.txt
output/: 1.html  2.html  index.html
src/: HsBlog.hs
src/HsBlog/: Convert.hs  Directory.hs  Html.hs  Markup.hs
src/HsBlog/Html/: Internal.hs
test/: MarkupParsingSpec.hs
