cabal-version:       2.4

name:                hs-blog
version:             0.1.0.0
synopsis:            A custom blog generator for markup files
description:         This package provides a static blog generator from
                     a custom markup format to HTML. It defines a parser
                     for this custom markup format as well as an html pretty
                     printer EDSL.

                     It is used as the example project in the online book 'Learn
                     Haskell Blog Generator'.
homepage:            https://github.com/Pranav2612000/simple-haskell-blog
bug-reports:         https://github.com/Pranav2612000/simple-haskell-blog/issues
license:             BSD-3-Clause
license-file:        LICENSE.txt
author:              Pranav Joglekar
maintainer:          pranav2000joglekar<at>gmail.com
category:            Web, Learning
extra-doc-files:
  README.md

common common-settings
  default-language: Haskell2010
  ghc-options:
    -Wall

library
  import: common-settings
  hs-source-dirs: src
  build-depends:
      base
    , directory
    , filepath
  exposed-modules:
    HsBlog
      HsBlog.Convert
      HsBlog.Directory
      HsBlog.Html
        HsBlog.Html.Internal
      HsBlog.Markup
      HsBlog.Env
  -- other-modules:

executable hs-blog-gen
  import: common-settings
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
    OptParse
  build-depends:
      base
    , directory
    , optparse-applicative
    , hs-blog
  ghc-options:
    -O

